Fixed UI form components

--- a/Angular/src/app/administrador/eventos/eventos.component.html
+++ b/Angular/src/app/administrador/eventos/eventos.component.html
@@ -12,11 +12,11 @@
             <div class="rectangulo-gris">
                 <ul>
                     <li class="Casa">Eventos</li>
-                    <li class="userAzul">Personal</li>
+                    <!-- <li class="userAzul">Personal</li> -->
                     <!-- <li class="archivos">Registro</li> -->
-                    <li class="informe">Reporte</li>
-                    <li class="pc">Estadísticas</li>
-                    <li class="salir"><a href="/ingreso" class="userAzul">SALIR</a></li>
+                    <!-- <li class="informe">Reporte</li> -->
+                    <!-- <li class="pc">Estadísticas</li> -->
+                    <li class="salir"><a href="/ingreso" class="userAzul">SALIR  <i class='bx bxs-exit' style='color:#1fd5fd' ></i></a></li>
                 </ul>
             </div>
         </div>
@@ -37,7 +37,7 @@
         </div>
         <div class="derecha">
             <img src="/assets/imgs/calendar.png" alt="calendar" width="300px">
-            <h1>Gestión</h1>
+            <h1><br> Gestión</h1>
             <div class="linea-azul"></div>
             <div class="botones-container">
                 <button class="boton-azul">Crear</button>
