--- a/Angular/src/app/personal/listar/listar.component.css
+++ b/Angular/src/app/personal/listar/listar.component.css
@@ -1,7 +1,7 @@
 /* fondo-gris.component.css */
 .fondo-gris {
     background-color: #383c40;
-    height: 100vh;
+
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -18,13 +18,14 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 15%;
+    width: 17%;
 }
 
 .fondo-gris .header .user h1 {
     color: #21c6ea;
     font-family: 'Latina Bold', sans-serif;
-    margin: 0; /* Asegura que no haya margen dentro del h1 */
+    margin: 0;
+    /* Asegura que no haya margen dentro del h1 */
 }
 
 .fondo-gris .header .imagen-izquierda {
@@ -45,7 +46,7 @@
 }
 
 .fondo-gris .contenido .izquierda {
-    flex: 0.3;
+    flex: 0.33;
 }
 
 .fondo-gris .contenido .izquierda .rectangulo-gris {
@@ -53,81 +54,124 @@
     /* Degradado de arriba hacia abajo */
     padding: 20px;
     border-radius: 10px;
-    height:92%;
+    height: 100%;
     width: 100%;
     display: flex;
-    justify-content: center; /* Centra la lista horizontalmente */
+    /* justify-content: center; Centra la lista horizontalmente */
 }
 
 .fondo-gris .contenido .izquierda ul {
     list-style: none;
     padding: 0;
+    margin-left: 20px;
 }
 
-.fondo-gris .izquierda .rectangulo-gris ul li{
+.fondo-gris .izquierda .rectangulo-gris ul li {
     color: #9f9f8d;
     font-family: 'Poppins', sans-serif;
     margin-bottom: 20px;
-    font-size:larger;
-    
+    font-size: larger;
+
 }
+
 .fondo-gris .izquierda .rectangulo-gris ul li.archivos {
-    height: 40px; /* Altura específica */
-    width: 100px; /* Ancho específico */
-    line-height: 40px; /* Alineación vertical del texto dentro del elemento */
-    font-size: 18px; /* Tamaño de fuente específico */
-    background-image: url("/assets/imgs/archivoB.jpg"); /* Ruta a tu imagen */
+    height: 40px;
+    /* Altura específica */
+    width: 100px;
+    /* Ancho específico */
+    line-height: 40px;
+    /* Alineación vertical del texto dentro del elemento */
+    font-size: 18px;
+    /* Tamaño de fuente específico */
+    background-image: url("/assets/imgs/archivoB.jpg");
+    /* Ruta a tu imagen */
     background-repeat: no-repeat;
-    background-position: 20px left; /* Ajusta la posición según tu diseño */
-    padding-left: 50px; /* Ajusta el espaciado entre la imagen y el texto */
+    background-position: 20px left;
+    /* Ajusta la posición según tu diseño */
+    padding-left: 50px;
+    /* Ajusta el espaciado entre la imagen y el texto */
     background-size: 40px 40px;
 }
+
 .fondo-gris .izquierda .rectangulo-gris ul li.userAzul {
-    color: #ffffff; /* Sobreescribe el color para el elemento con la clase "actual" */
+    color: #ffffff;
+    /* Sobreescribe el color para el elemento con la clase "actual" */
     font-weight: bold;
-    height: 40px; /* Altura específica */
-    width: 100px; /* Ancho específico */
-    line-height: 40px; /* Alineación vertical del texto dentro del elemento */
-    font-size: 18px; /* Tamaño de fuente específico */
-    background-image: url("/assets/imgs/userAzul.jpg"); /* Ruta a tu imagen */
+    height: 40px;
+    /* Altura específica */
+    width: 100px;
+    /* Ancho específico */
+    line-height: 40px;
+    /* Alineación vertical del texto dentro del elemento */
+    font-size: 18px;
+    /* Tamaño de fuente específico */
+    background-image: url("/assets/imgs/userAzul.jpg");
+    /* Ruta a tu imagen */
     background-repeat: no-repeat;
-    background-position: 20px left; /* Ajusta la posición según tu diseño */
-    padding-left: 50px; /* Ajusta el espaciado entre la imagen y el texto */
+    background-position: 20px left;
+    /* Ajusta la posición según tu diseño */
+    padding-left: 50px;
+    /* Ajusta el espaciado entre la imagen y el texto */
     background-size: 40px 40px;
 }
+
 .fondo-gris .izquierda .rectangulo-gris ul li.Casa {
-    height: 40px; /* Altura específica */
-    width: 100px; /* Ancho específico */
-    line-height: 40px; /* Alineación vertical del texto dentro del elemento */
-    font-size: 18px; /* Tamaño de fuente específico */
-    background-image: url("/assets/imgs/casa.jpg"); /* Ruta a tu imagen */
+    height: 40px;
+    /* Altura específica */
+    width: 100px;
+    /* Ancho específico */
+    line-height: 40px;
+    /* Alineación vertical del texto dentro del elemento */
+    font-size: 18px;
+    /* Tamaño de fuente específico */
+    background-image: url("/assets/imgs/casa.jpg");
+    /* Ruta a tu imagen */
     background-repeat: no-repeat;
-    background-position: 20px left; /* Ajusta la posición según tu diseño */
-    padding-left: 50px; /* Ajusta el espaciado entre la imagen y el texto */
+    background-position: 20px left;
+    /* Ajusta la posición según tu diseño */
+    padding-left: 50px;
+    /* Ajusta el espaciado entre la imagen y el texto */
     background-size: 40px 40px;
 }
+
 .fondo-gris .izquierda .rectangulo-gris ul li.informe {
-    height: 40px; /* Altura específica */
-    width: 100px; /* Ancho específico */
-    line-height: 40px; /* Alineación vertical del texto dentro del elemento */
-    font-size: 18px; /* Tamaño de fuente específico */
-    background-image: url("/assets/imgs/informe.jpg"); /* Ruta a tu imagen */
+    height: 40px;
+    /* Altura específica */
+    width: 100px;
+    /* Ancho específico */
+    line-height: 40px;
+    /* Alineación vertical del texto dentro del elemento */
+    font-size: 18px;
+    /* Tamaño de fuente específico */
+    background-image: url("/assets/imgs/informe.jpg");
+    /* Ruta a tu imagen */
     background-repeat: no-repeat;
-    background-position: 20px left; /* Ajusta la posición según tu diseño */
-    padding-left: 50px; /* Ajusta el espaciado entre la imagen y el texto */
+    background-position: 20px left;
+    /* Ajusta la posición según tu diseño */
+    padding-left: 50px;
+    /* Ajusta el espaciado entre la imagen y el texto */
     background-size: 40px 40px;
 }
+
 .fondo-gris .izquierda .rectangulo-gris ul li.pc {
-    height: 40px; /* Altura específica */
-    width: 100px; /* Ancho específico */
-    line-height: 40px; /* Alineación vertical del texto dentro del elemento */
-    font-size: 18px; /* Tamaño de fuente específico */
-    background-image: url("/assets/imgs/pc.jpg"); /* Ruta a tu imagen */
+    height: 40px;
+    /* Altura específica */
+    width: 100px;
+    /* Ancho específico */
+    line-height: 40px;
+    /* Alineación vertical del texto dentro del elemento */
+    font-size: 18px;
+    /* Tamaño de fuente específico */
+    background-image: url("/assets/imgs/pc.jpg");
+    /* Ruta a tu imagen */
     background-repeat: no-repeat;
-    background-position: 20px left; /* Ajusta la posición según tu diseño */
-    padding-left: 50px; /* Ajusta el espaciado entre la imagen y el texto */
+    background-position: 20px left;
+    /* Ajusta la posición según tu diseño */
+    padding-left: 50px;
+    /* Ajusta el espaciado entre la imagen y el texto */
     background-size: 40px 40px;
 }
+
 .fondo-gris .contenido .izquierda ul li a {
     color: #9f9f8d;
     font-family: 'Poppins', sans-serif;
@@ -135,21 +179,25 @@
     text-decoration: none;
 }
 
-.fondo-gris .contenido .izquierda ul li a:hover{
+.fondo-gris .contenido .izquierda ul li a:hover {
     color: #1fd5fd;
 }
 
 .fondo-gris .contenido .centro {
-    text-align: left;
-    margin-left: 250px;
+    text-align: center;
+    margin-left: 160px;
     font-family: 'Latina Bold', sans-serif;
-    color:#1fd5fd;
-    width: 600px;
+    color: #1fd5fd;
+    /* width: 600px; */
 }
+
 .scrollable {
-    max-height: 600px; /* Ajusta la altura máxima según tus necesidades */
-    overflow-y: auto; /* O también puedes usar overflow-y: scroll; */
+    max-height: 600px;
+    /* Ajusta la altura máxima según tus necesidades */
+    overflow-y: auto;
+    /* O también puedes usar overflow-y: scroll; */
 }
+
 .fondo-gris .contenido .centro .rectangulos-container {
     display: flex;
     flex-direction: column;
@@ -166,8 +214,10 @@
 }
 
 .fondo-gris .contenido .centro .rectangulo img {
-    width: 250px; /* Ajusta el ancho de la imagen según tu diseño */
-    height: 250px; /* Ajusta la altura de la imagen según tu diseño */
+    width: 200px;
+    /* Ajusta el ancho de la imagen según tu diseño */
+    height: 200px;
+    /* Ajusta la altura de la imagen según tu diseño */
     margin-right: 10px;
 }
 
@@ -183,20 +233,22 @@
     margin-bottom: 30px;
 }
 
-  .fondo-gris .contenido .derecha{
+.fondo-gris .contenido .derecha {
     flex: 0.5;
     padding: 10px;
-    margin-left: 100px;
+    margin-left: 150px;
     justify-content: center;
     font-family: 'Latina Bold', sans-serif;
-    color:#1fd5fd;
-  }
-  .fondo-gris .contenido .derecha .linea-azul {
+    color: #1fd5fd;
+}
+
+.fondo-gris .contenido .derecha .linea-azul {
     width: 70%;
     height: 1px;
     background-color: #1fd5fd;
     margin-bottom: 20px;
 }
+
 .fondo-gris .contenido .derecha .checkbox-list {
     list-style: none;
     padding: 0;
@@ -205,6 +257,7 @@
 .fondo-gris .contenido .derecha .checkbox-list li {
     margin-bottom: 30px;
 }
+
 .fondo-gris .contenido .derecha .checkbox-list label {
     font-weight: bold;
     color: white;
@@ -213,10 +266,14 @@
 
 .fondo-gris .contenido .derecha .checkbox-list input[type="checkbox"] {
     margin-right: 10px;
-    background-color: #383c40 !important; /* Fondo gris */
-    border: 2px solid #1fd5fd !important; /* Borde azul */
-    border-radius: 5px; /* Bordes redondeados */
-    padding: 5px; /* Espaciado interno */
+    background-color: #383c40 !important;
+    /* Fondo gris */
+    border: 2px solid #1fd5fd !important;
+    /* Borde azul */
+    border-radius: 5px;
+    /* Bordes redondeados */
+    padding: 5px;
+    /* Espaciado interno */
 }
 
 .fondo-gris .contenido .derecha .checkbox-list label {
@@ -230,18 +287,26 @@
 }
 
 .fondo-gris .contenido .derecha .checkbox-list input[type="checkbox"] {
-    display: none; /* Oculta la checkbox estándar */
+    display: none;
+    /* Oculta la checkbox estándar */
 }
 
-.fondo-gris .contenido .derecha .checkbox-list input[type="checkbox"] + span {
-    margin-left: 10px; /* Espacio entre la checkbox y el texto */
-    background-color: #383c40; /* Fondo gris */
-    border: 2px solid #1fd5fd; /* Borde azul */
-    border-radius: 5px; /* Bordes redondeados */
-    padding: 5px; /* Espaciado interno */
+.fondo-gris .contenido .derecha .checkbox-list input[type="checkbox"]+span {
+    margin-left: 10px;
+    /* Espacio entre la checkbox y el texto */
+    background-color: #383c40;
+    /* Fondo gris */
+    border: 2px solid #1fd5fd;
+    /* Borde azul */
+    border-radius: 5px;
+    /* Bordes redondeados */
+    padding: 5px;
+    /* Espaciado interno */
 }
 
-.fondo-gris .contenido .derecha .checkbox-list input[type="checkbox"]:checked + span {
-    background-color: #1fd5fd; /* Fondo azul cuando está seleccionado */
-    color: #383c40; /* Texto blanco cuando está seleccionado */
+.fondo-gris .contenido .derecha .checkbox-list input[type="checkbox"]:checked+span {
+    background-color: #1fd5fd;
+    /* Fondo azul cuando está seleccionado */
+    color: #383c40;
+    /* Texto blanco cuando está seleccionado */
 }
