--- a/Angular/src/app/administrador/eventos/eventos.component.css
+++ b/Angular/src/app/administrador/eventos/eventos.component.css
@@ -24,8 +24,9 @@
 .fondo-gris .header .user h1 {
     color: #21c6ea;
     font-family: 'Latina Bold', sans-serif;
-    margin: 0 10px 0 0; /* Asegura que no haya margen dentro del h1 */
-    
+    margin: 0 10px 0 0;
+    /* Asegura que no haya margen dentro del h1 */
+
 }
 
 .fondo-gris .header .imagen-izquierda {
@@ -46,7 +47,7 @@
 }
 
 .fondo-gris .contenido .izquierda {
-    flex: 0.3;
+    flex: 0.33;
 }
 
 .fondo-gris .contenido .izquierda .rectangulo-gris {
@@ -54,81 +55,124 @@
     /* Degradado de arriba hacia abajo */
     padding: 20px;
     border-radius: 10px;
-    height:92%;
+    height: 100%;
     width: 100%;
     display: flex;
-    justify-content: center; /* Centra la lista horizontalmente */
+    /* justify-content: center; Centra la lista horizontalmente */
 }
 
 .fondo-gris .contenido .izquierda ul {
     list-style: none;
+    margin-left: 20px;
     padding: 0;
 }
 
-.fondo-gris .izquierda .rectangulo-gris ul li{
+.fondo-gris .izquierda .rectangulo-gris ul li {
     color: #9f9f8d;
     font-family: 'Poppins', sans-serif;
     margin-bottom: 20px;
-    font-size:larger;
-    
+    font-size: larger;
+
 }
+
 .fondo-gris .izquierda .rectangulo-gris ul li.archivos {
-    height: 40px; /* Altura específica */
-    width: 100px; /* Ancho específico */
-    line-height: 40px; /* Alineación vertical del texto dentro del elemento */
-    font-size: 18px; /* Tamaño de fuente específico */
-    background-image: url("/assets/imgs/archivoB.jpg"); /* Ruta a tu imagen */
+    height: 40px;
+    /* Altura específica */
+    width: 100px;
+    /* Ancho específico */
+    line-height: 40px;
+    /* Alineación vertical del texto dentro del elemento */
+    font-size: 18px;
+    /* Tamaño de fuente específico */
+    background-image: url("/assets/imgs/archivoB.jpg");
+    /* Ruta a tu imagen */
     background-repeat: no-repeat;
-    background-position: 20px left; /* Ajusta la posición según tu diseño */
-    padding-left: 50px; /* Ajusta el espaciado entre la imagen y el texto */
+    background-position: 20px left;
+    /* Ajusta la posición según tu diseño */
+    padding-left: 50px;
+    /* Ajusta el espaciado entre la imagen y el texto */
     background-size: 40px 40px;
 }
+
 .fondo-gris .izquierda .rectangulo-gris ul li.userAzul {
-    height: 40px; /* Altura específica */
-    width: 100px; /* Ancho específico */
-    line-height: 40px; /* Alineación vertical del texto dentro del elemento */
-    font-size: 18px; /* Tamaño de fuente específico */
-    background-image: url("/assets/imgs/user_blanco.jpg"); /* Ruta a tu imagen */
+    height: 40px;
+    /* Altura específica */
+    width: 100px;
+    /* Ancho específico */
+    line-height: 40px;
+    /* Alineación vertical del texto dentro del elemento */
+    font-size: 18px;
+    /* Tamaño de fuente específico */
+    background-image: url("/assets/imgs/user_blanco.jpg");
+    /* Ruta a tu imagen */
     background-repeat: no-repeat;
-    background-position: 20px left; /* Ajusta la posición según tu diseño */
-    padding-left: 50px; /* Ajusta el espaciado entre la imagen y el texto */
+    background-position: 20px left;
+    /* Ajusta la posición según tu diseño */
+    padding-left: 50px;
+    /* Ajusta el espaciado entre la imagen y el texto */
     background-size: 40px 40px;
 }
+
 .fondo-gris .izquierda .rectangulo-gris ul li.Casa {
-    color: #ffffff; /* Sobreescribe el color para el elemento con la clase "actual" */
+    color: #ffffff;
+    /* Sobreescribe el color para el elemento con la clase "actual" */
     font-weight: bold;
-    height: 40px; /* Altura específica */
-    width: 100px; /* Ancho específico */
-    line-height: 40px; /* Alineación vertical del texto dentro del elemento */
-    font-size: 18px; /* Tamaño de fuente específico */
-    background-image: url("/assets/imgs/casaAzul.jpg"); /* Ruta a tu imagen */
+    height: 40px;
+    /* Altura específica */
+    width: 100px;
+    /* Ancho específico */
+    line-height: 40px;
+    /* Alineación vertical del texto dentro del elemento */
+    font-size: 18px;
+    /* Tamaño de fuente específico */
+    background-image: url("/assets/imgs/casaAzul.jpg");
+    /* Ruta a tu imagen */
     background-repeat: no-repeat;
-    background-position: 20px left; /* Ajusta la posición según tu diseño */
-    padding-left: 50px; /* Ajusta el espaciado entre la imagen y el texto */
+    background-position: 20px left;
+    /* Ajusta la posición según tu diseño */
+    padding-left: 50px;
+    /* Ajusta el espaciado entre la imagen y el texto */
     background-size: 40px 40px;
 }
+
 .fondo-gris .izquierda .rectangulo-gris ul li.informe {
-    height: 40px; /* Altura específica */
-    width: 100px; /* Ancho específico */
-    line-height: 40px; /* Alineación vertical del texto dentro del elemento */
-    font-size: 18px; /* Tamaño de fuente específico */
-    background-image: url("/assets/imgs/informe.jpg"); /* Ruta a tu imagen */
+    height: 40px;
+    /* Altura específica */
+    width: 100px;
+    /* Ancho específico */
+    line-height: 40px;
+    /* Alineación vertical del texto dentro del elemento */
+    font-size: 18px;
+    /* Tamaño de fuente específico */
+    background-image: url("/assets/imgs/informe.jpg");
+    /* Ruta a tu imagen */
     background-repeat: no-repeat;
-    background-position: 20px left; /* Ajusta la posición según tu diseño */
-    padding-left: 50px; /* Ajusta el espaciado entre la imagen y el texto */
+    background-position: 20px left;
+    /* Ajusta la posición según tu diseño */
+    padding-left: 50px;
+    /* Ajusta el espaciado entre la imagen y el texto */
     background-size: 40px 40px;
 }
+
 .fondo-gris .izquierda .rectangulo-gris ul li.pc {
-    height: 40px; /* Altura específica */
-    width: 100px; /* Ancho específico */
-    line-height: 40px; /* Alineación vertical del texto dentro del elemento */
-    font-size: 18px; /* Tamaño de fuente específico */
-    background-image: url("/assets/imgs/pc.jpg"); /* Ruta a tu imagen */
+    height: 40px;
+    /* Altura específica */
+    width: 100px;
+    /* Ancho específico */
+    line-height: 40px;
+    /* Alineación vertical del texto dentro del elemento */
+    font-size: 18px;
+    /* Tamaño de fuente específico */
+    background-image: url("/assets/imgs/pc.jpg");
+    /* Ruta a tu imagen */
     background-repeat: no-repeat;
-    background-position: 20px left; /* Ajusta la posición según tu diseño */
-    padding-left: 50px; /* Ajusta el espaciado entre la imagen y el texto */
+    background-position: 20px left;
+    /* Ajusta la posición según tu diseño */
+    padding-left: 50px;
+    /* Ajusta el espaciado entre la imagen y el texto */
     background-size: 40px 40px;
 }
+
 .fondo-gris .contenido .izquierda ul li a {
     color: #9f9f8d;
     font-family: 'Poppins', sans-serif;
@@ -142,9 +186,9 @@
 
 .fondo-gris .contenido .centro {
     text-align: left;
-    margin-left: 250px;
+    margin-left: 160px;
     font-family: 'Latina Bold', sans-serif;
-    color:#1fd5fd;
+    color: #1fd5fd;
 }
 
 .fondo-gris .contenido .centro .rectangulos-container {
@@ -163,8 +207,10 @@
 }
 
 .fondo-gris .contenido .centro .rectangulo img {
-    width: 250px; /* Ajusta el ancho de la imagen según tu diseño */
-    height: 250px; /* Ajusta la altura de la imagen según tu diseño */
+    width: 233px;
+    /* Ajusta el ancho de la imagen según tu diseño */
+    height: 233px;
+    /* Ajusta la altura de la imagen según tu diseño */
     margin-right: 10px;
 }
 
@@ -181,27 +227,31 @@
     margin-bottom: 30px;
     font-size: 20px;
 }
+
 .fondo-gris .contenido .centro .rectangulos-container .rectangulo p {
     font-size: 15px;
 }
 
-  .fondo-gris .contenido .derecha{
+.fondo-gris .contenido .derecha {
     flex: 0.5;
     padding: 10px;
-    margin-left: 100px;
+    margin-left: 150px;
     justify-content: center;
     font-family: 'Latina Bold', sans-serif;
-    color:#1fd5fd;
-  }
-  .fondo-gris .contenido .derecha .linea-azul {
+    color: #1fd5fd;
+}
+
+.fondo-gris .contenido .derecha .linea-azul {
     width: 70%;
     height: 1px;
     background-color: #1fd5fd;
     margin-bottom: 20px;
 }
+
 .fondo-gris .contenido .derecha .botones-container {
     display: flex;
-    margin-top: 10px; /* Ajusta el espacio entre la línea azul y los botones según sea necesario */
+    margin-top: 10px;
+    /* Ajusta el espacio entre la línea azul y los botones según sea necesario */
 }
 
 .fondo-gris .contenido .derecha .botones-container .boton-azul {
@@ -214,4 +264,8 @@
     font-size: 16px;
     cursor: pointer;
     font-weight: bold;
+}
+
+.fondo-gris .contenido .izquierda ul li a:hover {
+    color: #1fd5fd;
 }
