--- a/Angular/src/app/personal/listar/listar.component.html
+++ b/Angular/src/app/personal/listar/listar.component.html
@@ -13,10 +13,10 @@
                 <ul>
                     <!-- <li class="Casa"><a href="/personalin" class="userAzul">Inicio</a></li> -->
                     <li class="userAzul">Pendiente</li>
-                    <li class="archivos">Recuperado</li>
-                    <li class="informe">Informe</li>
-                    <li class="pc">Estadísticas</li>
-                    <li class="salir"><a href="/ingreso" class="userAzul">SALIR</a></li>
+                    <!-- <li class="archivos">Recuperado</li> -->
+                    <!-- <li class="informe">Informe</li> -->
+                    <!-- <li class="pc">Estadísticas</li> -->
+                    <li class="salir"><a href="/ingreso" class="userAzul">SALIR  <i class='bx bxs-exit' style='color:#1fd5fd' ></i></a></li>
                 </ul>
             </div>
         </div>
@@ -36,7 +36,7 @@
         
         <div class="derecha">
             <img src="/assets/imgs/calendar.png" alt="calendar" width="300px">
-            <h1>Filtros</h1>
+            <h1><br> Filtros</h1>
             <div class="linea-azul"></div>
             <div class="checkbox-list">
                 <li>
